Fixed EnderPay currency displaying with 32 added to the amount