@@ -5,139 +5,33 @@ import net.milkbowl.vault.economy.Economy;
 import net.milkbowl.vault.economy.EconomyResponse;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
-import org.bukkit.Server;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandSender;
-import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
-import org.bukkit.generator.ChunkGenerator;
-import org.bukkit.plugin.Plugin;
-import org.bukkit.plugin.PluginDescriptionFile;
-import org.bukkit.plugin.PluginLoader;
 import org.bukkit.plugin.ServicePriority;
+import org.bukkit.plugin.java.JavaPlugin;
+import the_fireplace.grandeconomy.GrandEconomy;
 import the_fireplace.grandeconomy.api.GrandEconomyApi;
-import the_fireplace.grandeconomy.compat.IRegisterable;
+import the_fireplace.grandeconomy.econhandlers.vault.VaultEconHandler;
 
 import javax.annotation.Nullable;
-import java.io.File;
-import java.io.InputStream;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.logging.LogManager;
-import java.util.logging.Logger;
 
-public class RegisterVaultEconomy implements IRegisterable, Economy {
-    private Plugin dummyPlugin;
+public final class RegisterVaultEconomy extends JavaPlugin implements Economy {
     @Override
-    public void register() {
-        dummyPlugin = new Plugin() {
-            @Override
-            public File getDataFolder() {
-                return null;
-            }
+    public void onEnable() {
+        super.onEnable();
+        if(!Lists.newArrayList("bukkit", "vault").contains(GrandEconomy.cfg.economyBridge.toLowerCase()))
+            Bukkit.getServer().getServicesManager().register(Economy.class, this, this, ServicePriority.High);
+        else
+            //noinspection deprecation
+            GrandEconomy.setEconomy(new VaultEconHandler());
+    }
 
-            @Override
-            public PluginDescriptionFile getDescription() {
-                return null;
-            }
-
-            @Override
-            public FileConfiguration getConfig() {
-                return null;
-            }
-
-            @Override
-            public InputStream getResource(String filename) {
-                return null;
-            }
-
-            @Override
-            public void saveConfig() {
-
-            }
-
-            @Override
-            public void saveDefaultConfig() {
-
-            }
-
-            @Override
-            public void saveResource(String resourcePath, boolean replace) {
-
-            }
-
-            @Override
-            public void reloadConfig() {
-
-            }
-
-            @Override
-            public PluginLoader getPluginLoader() {
-                return null;
-            }
-
-            @Override
-            public Server getServer() {
-                return Bukkit.getServer();
-            }
-
-            @Override
-            public boolean isEnabled() {
-                return true;
-            }
-
-            @Override
-            public void onDisable() {
-
-            }
-
-            @Override
-            public void onLoad() {
-
-            }
-
-            @Override
-            public void onEnable() {
-
-            }
-
-            @Override
-            public boolean isNaggable() {
-                return false;
-            }
-
-            @Override
-            public void setNaggable(boolean canNag) {
-
-            }
-
-            @Override
-            public ChunkGenerator getDefaultWorldGenerator(String worldName, String id) {
-                return null;
-            }
-
-            @Override
-            public Logger getLogger() {
-                return LogManager.getLogManager().getLogger("Grand Economy API");
-            }
-
-            @Override
-            public String getName() {
-                return "Grand Economy API";
-            }
-
-            @Override
-            public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
-                return false;
-            }
-
-            @Override
-            public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-                return null;
-            }
-        };
-        Bukkit.getServer().getServicesManager().register(Economy.class, this, dummyPlugin, ServicePriority.High);
+    @Override
+    public void onDisable() {
+        super.onDisable();
+        Bukkit.getServer().getServicesManager().unregisterAll(this);
     }
 
     @Nullable
@@ -150,16 +44,6 @@ public class RegisterVaultEconomy implements IRegisterable, Economy {
         } catch(IllegalArgumentException e) {
             return null;
         }
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return !Lists.newArrayList("vault", "bukkit").contains(GrandEconomyApi.getEconomyModId().toLowerCase());
-    }
-
-    @Override
-    public String getName() {
-        return "Grand Economy API";
     }
 
     @Override
