@@ -1,1 +1,2 @@
 Fixed EnderPay currency displaying with 32 added to the amount
+Changed the method of loading alongside Vault to help prevent issues
